# code-collection

./: LICENSE  README.md
ansible/: install.sh  inventory  run.sh  run_command.yml
aws/dynamodb/: delete-dynamo-tables.sh
aws/ec2/: disable-detailed-monitoring.py
aws/load-balancer/: delete-elb.py  relatorio-sem-uso.py
aws/route53/: lista-zonas-procura-entrada-cloudflare.py  lista-zonas-procura-entrada.py
aws/s3/: delete-files-timestamp.py  disable-detailed-monitoring.sh
aws/sqs/: send-and-receive-message.py
aws/vpc/: contador-servicos-e-uso-de-ips.sh
benchmarking/siege/: run.sh
elastic-search/cerebro/: run.sh
elastic-search/scripts/: .env_example  migrar-indices.py  regra-retencao.py  remove-node.py
finance/OpenBBTerminal/: start.sh
k8s/cybereason/: node-patch-installer.yaml
k8s/deployment-to-daemonset/: k8s-workload-convertor.py  requirement.txt
k8s/installation/: post-install.sh
k8s/k8s-backup/: ns_backup.sh
k8s/k8s-deploy/: get-deploy-filter-env.sh  (+1 more)
keda/: .env_example  Dockerfile  Makefile  build.sh  docker-compose.yml  pyproject.toml
keda/keda-restart/: __main__.py
lab/app-for-protocol-tests/: Dockerfile  Makefile  docker-compose.yml  pyproject.toml
lab/app-for-protocol-tests/app/: app.py
lab/app-for-protocol-tests/database/: init.sql
lab/counter-service/: .env_example  Dockerfile  Makefile  docker-compose.yml  pyproject.toml
lab/counter-service/counter/: connection.py  routes.py
network/: vpn-delete-all-interfaces.sh
prometheus/: promlens.sh
sentry/: .env example  README.md  list-kafka-topics.sh  update-rate-limit.py
(+32 files in other folders)
